kubernetes/minidlna/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minidlna-pod
  labels:
    rioiotplatform: minidlna
spec:
  ports:
  #- name: http
  #  protocol: TCP
  #  port: 8200
  #  targetPort: 8200
  - name: https
    protocol: UDP
    port: 1900
    targetPort: 1900
  loadBalancerIP: 192.168.1.101
  selector:
    app: minidlna-pod
  type: LoadBalancer
